Fixed uncionality, added readme, documentation created.
